--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
   <!-- favicons -->
+  <link rel="manifest" href="/site.webmanifest">
+  <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#bc2f2f">
   <link rel="apple-touch-icon-precomposed" sizes="57x57" href="/Favicons/apple-touch-icon-57x57.png" />
   <link rel="apple-touch-icon-precomposed" sizes="114x114" href="/Favicons/apple-touch-icon-114x114.png" />
   <link rel="apple-touch-icon-precomposed" sizes="72x72" href="/Favicons/apple-touch-icon-72x72.png" />
@@ -20,13 +22,15 @@
   <link rel="icon" type="image/png" href="/Favicons/favicon-16x16.png" sizes="16x16" />
   <link rel="icon" type="image/png" href="/Favicons/favicon-128.png" sizes="128x128" />
 
+  <meta name="theme-color" content="#ffffff">
   <meta name="application-name" content="&nbsp;" />
   <meta name="msapplication-TileColor" content="#FFFFFF" />
   <meta name="msapplication-TileImage" content="mstile-144x144.png" />
   <meta name="msapplication-square70x70logo" content="mstile-70x70.png" />
   <meta name="msapplication-square150x150logo" content="mstile-150x150.png" />
   <meta name="msapplication-wide310x150logo" content="mstile-310x150.png" />
-  <meta name="msapplication-square310x310logo" content="mstile-310x310.png" />
+  <meta name="msapplication-square310x310logo" content="mstile-310x310.png" /> 
+  <!-- favicons end  -->
 
   <title>Stephen Lemmy Mwaura</title>
 </head>
