--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
   <!-- favicons -->
   <link rel="manifest" href="/site.webmanifest">
-  <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#bc2f2f">
+  <link rel="mask-icon" href="/Favicons/safari-pinned-tab.svg" color="#bc2f2f">
   <link rel="apple-touch-icon-precomposed" sizes="57x57" href="/Favicons/apple-touch-icon-57x57.png" />
   <link rel="apple-touch-icon-precomposed" sizes="114x114" href="/Favicons/apple-touch-icon-114x114.png" />
   <link rel="apple-touch-icon-precomposed" sizes="72x72" href="/Favicons/apple-touch-icon-72x72.png" />
